<resources>
    <string name="app_name">Stock Watch App</string>
    <string name="percent">percent</string>
    <string name="amount">amount</string>
    <string name="companyname">companyName</string>
    <string name="symbol">symbol</string>
    <string name="latestprice">latestPrice</string>
    <string name="priceChangeDirection">▲▼</string>
    <string name="additem">addItem</string>
    <string name="notes_file">StocksFile.json</string>
</resources>