<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/symbol"
        android:textColor="#1CEC05"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceChangeAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/amount"
        android:textColor="#1CEC05"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/symbol"
        app:layout_constraintStart_toEndOf="@+id/priceChangeDirection" />

    <TextView
        android:id="@+id/priceChangePercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/percent"
        android:textColor="#1CEC05"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/symbol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/priceChangeAmount" />

    <TextView
        android:id="@+id/priceChangeDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/priceChangeDirection"
        android:textColor="#1CEC05"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/symbol"
        app:layout_constraintStart_toEndOf="@+id/latestTradePrice" />

    <TextView
        android:id="@+id/latestTradePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:text="@string/latestprice"
        android:textColor="#1CEC05"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/symbol"
        app:layout_constraintStart_toEndOf="@+id/symbol" />

    <TextView
        android:id="@+id/companyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/companyname"
        android:textColor="#1CEC05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/symbol"
        app:layout_constraintTop_toBottomOf="@+id/symbol" />

</androidx.constraintlayout.widget.ConstraintLayout>